<resources>
    <string name="app_name">My Application</string>

    <string name="action_settings">Settings</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="univ_info">Общая информация</string>
    <string name="profs">Преподаватели</string>
    <string name="grads">Выпускники</string>
    <string name="empl">Трудоустройство</string>
    <string name="mag">Магистратура и аспирантура</string>
    <string name="ieup">ИЭУП</string>
    <string name="isf">ИСФ</string>
    <string name="miepm">МИЭПМ</string>
    <string name="otf">ОТФ</string>
    <string name="faid">ФАиД</string>
    <string name="fiesis">ФИЭСиС</string>
    <string name="about_univ">О ВУЗе</string>
    <string name="contacts">Контакты</string>
    <string name="how_to">Как поступить?</string>
    <string name="where_to">Куда поступить?</string>
    <string name="range">Узнать свой рейтинг</string>
    <string name="web">Мы в сети</string>
    <string name="about_app">О приложении</string>
    <string name="statistic">Статистика поступления</string>
    <string name="rules">Правила приёма</string>
    <string name="prep">Подготовительные курсы</string>
    <string name="faq">FAQ</string>
    <string name="program">Программа:</string>
    <string name="spec">Направление:</string>
    <string name="form">Форма обучения:</string>
    <string name="extramural">заочная</string>
    <string name="fulltime">очная</string>
    <string name="show">Показать</string>
    <string name="bach">Бакалавриат/специалитет</string>
    <string name="magistr">Магистратура</string>
    <string name="aspir">Аспирантура</string>
    <string name="extram">Заочное обучение</string>
    <string name="foreign">Приём иностранных граждан</string>
    <string name="training">Повышение квалификации</string>
    <string name="address">ул. Ильинская, 65, корп.1, Нижний Новгород, Нижегородская обл., 603000</string>
    <string name="prep_phone">8-831-433-95-24</string>
    <string name="priem">Приёмная комиссия</string>
    <string name="priem_phone">8-831-280-84-45</string>
    <string name="worktime">Пн-Пт: 9:00 – 16:00</string>
    <string name="post">Наша почта</string>
    <string name="email">priem@nngasu.ru</string>
    <string name="spases_count">Количество мест:</string>
    <string name="sort">Сортировать по:</string>
    <string name="sort_fio">ФИО</string>
    <string name="sort_range">баллы ЕГЭ</string>
    <string name="fio_column">ФИО абитуриента</string>
    <string name="range_column">Рейтинг</string>
    <string name="popup">настроить уведомления</string>
    <string name="places">[бюджет|договор]</string>
    <string name="notification">Уведомлять меня\nоб изменениях</string>

    <string-array name="programs">
        <item name="bachelor">Бакалавр/специалист</item>
        <item name="magistracy">Магистратура</item>
        <item name="postgraduate">Аспирантура</item>
    </string-array>

    <string-array name="bachelor">
        <item name="05.03.06">Экология и природопользование [24|6]</item>
        <item name="07.03.01">Архитектура [37|47]</item>
        <item name="07.03.03">Дизайн архитектурной среды [15|12]</item>
        <item name="08.03.01">Строительство [252|215]</item>
        <item name="08.05.01">Строительство уникальных\nзданий и сооружений [45|15]</item>
        <item name="09.03.02">Информационные системы\nи технологии [21|9]</item>
        <item name="09.03.03">Прикладная информатика [22|8]</item>
        <item name="13.03.01">Теплоэнергетика и теплотехника [22|8]</item>
        <item name="20.03.01">Техносферная безопасность [20|10]</item>
        <item name="21.03.02">Землеустройство и кадастры [25|5]</item>
        <item name="21.03.03">Геодезия и дистанционное\nзондирование [25|5]</item>
        <item name="27.03.01">Стандартизация и метрология [24|6]</item>
        <item name="35.03.10">Ландшафтная архитектура [25|5]</item>
        <item name="38.03.01">Экономика [0|120]</item>
        <item name="38.03.02">Менеджмент [0|300]</item>
        <item name="40.03.01">Юриспруденция [0|90]</item>
        <item name="43.03.02">Туризм [0|25]</item>
        <item name="51.03.01">Культурология [12|13]</item>
        <item name="54.03.01">Дизайн [10|65]</item>
    </string-array>

    <string-array name="magistracy">
        <item name="05.04.06">Экология и природопользование[10|10]</item>
        <item name="07.04.01">Архитектура [13|15]</item>
        <item name="07.04.02">Реконструкция и реставрация архитектурного наследия [4|10]</item>
        <item name="07.04.03">Дизайн архитектурной среды [5|10]</item>
        <item name="08.04.01">Строительство [80|235]</item>
        <item name="09.04.02">Информационные системы и технологии [0|12]</item>
        <item name="09.04.03">Прикладная информатика [0|12]</item>
        <item name="13.04.01">Теплоэнергетика и теплотехника [10|10]</item>
        <item name="20.04.01">Техносферная безопасность [10|10]</item>
        <item name="21.04.02">Землеустройство и кадастры [10|10]</item>
        <item name="27.04.01">Стандартизация и метрология [0|30]</item>
        <item name="35.04.10">Ландшафтная архитектура [10|10]</item>
        <item name="38.04.01">Экономика [0|50]</item>
        <item name="38.04.02">Менеджмент [0|40]</item>
        <item name="38.04.08">Финансы и кредит [0|20]</item>
        <item name="40.04.01">Юриспруденция [0|60]</item>
        <item name="51.04.01">Культурология [5|10]</item>
        <item name="54.04.01">Дизайн [2|10]</item>
    </string-array>

    <string-array name="postgraduate">
        <item name="07.06.01">Архитектура</item>
        <item name="08.06.01">Техника и технологии строительства</item>
        <item name="09.06.01">Информатика и вычислительная техника</item>
        <item name="37.06.01">Психологические науки</item>
        <item name="38.06.01">Экономика</item>
        <item name="44.06.01">Образование и педагогические науки</item>
        <item name="46.06.01">Исторические науки и археология</item>
        <item name="47.06.01">Философия, этика и религиоведение</item>
        <item name="51.06.01">Культурология</item>
        <item name="27.06.01">Управление в технических системах</item>
    </string-array>

</resources>
