<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="О ВУЗе" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:clickable="false">

                    <TextView
                        android:id="@+id/numInfoTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num1"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/infoButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:onClick="onClickAboutUs"
                        android:text="@string/univ_info"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/numProfTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num2"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/profButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:onClick="onClickProfs"
                        android:text="@string/profs"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/numGradTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num3"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/gradsButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:onClick="onClickStuds"
                        android:text="@string/grads"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/numEmpTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num4"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/empButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/empl"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/numMagTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num5"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/magButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/mag"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

