<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Куда поступить?" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.8"
                android:orientation="vertical"
                android:weightSum="4">

                <Button
                    android:id="@+id/bachButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickBach"
                    android:text="@string/bach"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/magistrButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickMag"
                    android:text="@string/magistr"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/aspirButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickAsp"
                    android:text="@string/aspir"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/extramButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickExtr"
                    android:text="@string/extram"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>