<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Как поступить?" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:clickable="false">

                    <TextView
                        android:id="@+id/numStatTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num1"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/statButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/statistic"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/numRulesTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num2"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/rulesButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/rules"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/numPrepTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num3"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/prepButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:onClick="onClickPrep"
                        android:text="@string/prep"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/numFaqTextView"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/num4"
                        android:textAlignment="viewEnd"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/faqButton"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:text="@string/faq"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:visibility="visible" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>